<resources>
    <string name="app_name">Grimpeurs Cycling Club</string>
    <string name="title_activity_register_information">RegisterInformation</string>
    <string name="Admin">Admin</string>
    <string name="CycleClub">Cycle Club</string>
    <string name="Participant">Participant</string>
    <string name="select">Please select a Role</string>
    <string name="name">Enter a Username</string>
    <string name="title_activity_registration_information">RegistrationInformation</string>
</resources>