<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegistrationInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="1">

            <Button
                android:id="@+id/Role_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:onClick="setRole"
                android:text="@string/Admin" />

            <Button
                android:id="@+id/Role_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:onClick="setRole"
                android:text="@string/CycleClub" />

            <Button
                android:id="@+id/Role_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:onClick="setRole"
                android:text="@string/Participant" />
        </GridLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="47dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="289dp" />

        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setRole"
            android:text="Complete Registration" />

    </LinearLayout>
</RelativeLayout>